CELE-18 Add new API rest endpoint and client
